gitops/prod/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: vacman-backend
  labels:
    app.kubernetes.io/name: vacman-backend
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: vacman-backend

---

apiVersion: v1
kind: Service
metadata:
  name: vacman-frontend
  labels:
    app.kubernetes.io/name: vacman-frontend
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: vacman-frontend

---

#
# The service used by application pods to connect to redis
#

apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app.kubernetes.io/name: redis
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: redis
    - name: sentinel
      port: 26379
      targetPort: sentinel
  selector:
    app.kubernetes.io/name: redis

---

#
# The headless service is used by sentinel to target individual pods
#
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
  labels:
    app.kubernetes.io/name: redis-headless
spec:
  clusterIP: None
  ports:
    - name: redis
      port: 6379
      targetPort: redis
    - name: sentinel
      port: 26379
      targetPort: sentinel
  selector:
    app.kubernetes.io/name: redis
