gitops/prod/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vacman-frontend
  labels:
    app.kubernetes.io/name: vacman-frontend
spec:
  ingressClassName: nginx
  tls:
    - secretName: esdcedsc
      hosts:
        - vacman.esdc-edsc.canada.ca
  rules:
    - host: vacman.prod-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vacman-frontend
                port:
                  name: http
    - host: vacman.esdc-edsc.canada.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vacman-frontend
                port:
                  name: http
